# MentorIA

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test_csrf_protection.py  test_pepper_implementation.py  test_pepper_simple.py  test_security_cache.py  test_simple_rate_limit.py
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 7b677b5054b2_model_option_for_chat.py  86be1f259be8_add_user_token_data.py  944912616179_add_tag_slug_for_chat_type.py  add_password_reset_tokens.py  c782223a6f5f_initial_migration.py  ecbe81109dbb_user_login_config.py
config/: logger.py  settings.py
docs/: RELATORIO_ENTREGA.md
docs/PI/: ESPECIFICACAO_PROJETO_FASE_01.md
shared/database/: migration.py  session.py
shared/qdrant/: client.py
src/ai/: loader.py
src/api/: Dockerfile  dependencies.py  main.py
src/middleware/: csrf_protection.py  https_security.py
src/rag/: pipeline.py  retriever.py
src/repositories/: chat_type.py  user.py
src/services/: auth.py  background.py  email.py  ingestion.py  instant_responses.py  rate_limiter.py  security_cache.py  seeder.py
src/web/: README.md  dashboard.html  index.html
tests/: conftest.py
tests/integration/: test_basic_flows.py  test_end_to_end.py
tests/performance/: test_load.py
tests/regression/: test_regression.py
tests/unit/: test_ai_providers.py  test_auth_service.py  test_background_service.py  test_chat_service.py  test_chat_type_repository.py  test_database_models.py  test_database_session.py  test_email_service.py  test_embedding.py  test_loader.py  (+14 more)
(+33 files in other folders)
